# go-guidelines

./: CLAUDE.md  hatch_build.py  pyproject.toml
src/go_guidelines_lint/: __init__.py  __main__.py  baseline.py  cli.py  cli_app.py  config.py  discovery.py  git_filter.py  guidelines_parser.py  llm_inject.py  logging_setup.py  models.py  reporters.py  runner.py
src/go_guidelines_lint/rules/: __init__.py  comments_detectors.py  contracts.py  detectors.py  finding_factory.py  registry.py  utils.py  validation.py
src/go_guidelines_lint/services/: __init__.py  catalog_service.py  file_analysis_service.py  rule_helpers.py  scan_service.py  tooling_service.py  types.py
tests/: conftest.py  test_cli.py  test_cli_new_flags.py  test_config.py  test_discovery.py  test_git_filter.py  test_guidelines_parser.py  test_hatch_build.py  test_llm_inject.py  test_models.py  test_reporters.py  test_runner.py
tests/fixtures/basic/: COMMENTS.md  GO_BEST_PRACTICES.md  bad.go  gbp005_bad.go  gbp007_bad.go  gbp009_bad.go  gbp010_bad.go  gbp014_bad.go  gbp015_bad_test.go  gbp018_bad.go  gbp019_bad.go  gbp021_bad.go
